# Asset-Viewer

./: .gitattributes  .gitignore  .prettierignore  QA_IMPLEMENTATION_PLAN.md  QA_REVIEW.md  QA_TASKS.md  README.md  eslint.config.js  install.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.example.json  settings.json  start.bat
.github/workflows/: windows-build.yml  windows-release.yml
backend/: __init__.py  asset_viewer.py  runtime_paths.py  server.py  settings_model.py  standalone.py
backend/blueprints/: __init__.py  assets.py  duplicates.py  settings.py  tags.py  ui.py  updates.py
backend/services/: __init__.py  app_context.py  asset_api.py  asset_viewer_duplicates.py  asset_viewer_metadata.py  asset_viewer_roots.py  asset_viewer_scanning.py  asset_viewer_thumbnails.py  asset_viewer_trash.py  duplicate_scan_tasks.py  settings_api.py  tag_api.py  ui_api.py  update_api.py
frontend/: asset_viewer.css  asset_viewer.html  asset_viewer_vue.html  asset_viewer_vue.js
frontend/styles/: asset-cards.css  base.css  details.css  duplicates.css  layout.css  responsive.css  tags.css
frontend/vue/: api.js  formatters.js  useAssetViewer.js
frontend/vue/components/: AssetCard.js  AssetDetailsPanel.js  AssetsView.js  DuplicatesView.js  SettingsView.js  StatsView.js  TagDetailsPanel.js  TagRow.js  TagsView.js
packaging/: bubba_media_viewer.spec
scripts/: build_windows.ps1
tests/: check_e621.py  test_asset_viewer.py  test_browser_smoke.py  upload_delete_test.py
tools/: check_tag_version.py  clean_requirements.py
(+10 files in other folders)
