[project]
name = "asset-viewer-standalone"
version = "0.1.1"
description = "Standalone media asset viewer."
authors = ["Bubbafett5611"]
license = "MIT"

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
	".venv",
	".pytest_tmp",
]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.10"
files = [
	"backend/server.py",
	"backend/settings_model.py",
	"backend/blueprints",
	"backend/services",
]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["server", "settings_model"]
ignore_errors = false

[[tool.mypy.overrides]]
module = ["asset_viewer"]
ignore_errors = true
